Shared Media: Fix Links horizontal scrollbar

--- a/src/components/right/RightColumnInfo.scss
+++ b/src/components/right/RightColumnInfo.scss
@@ -191,6 +191,7 @@
       }
 
       .site-name {
+        display: block;
         font-weight: 400;
         order: 3;
         color: var(--color-links);
